<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_mark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#9BDDFF"
    tools:context="com.example.keegz_000.question1.AddMark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvStudent"
        android:text="@string/student_no"
        android:textColor="#000"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="59dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/tvName"
        android:text="@string/name"
        android:textColor="#000"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/edtStudentNumber"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtName"
        android:layout_alignBaseline="@+id/tvName"
        android:layout_alignBottom="@+id/tvName"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/edtSurname" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/tvSurname"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:text="@string/student_surname"
        android:textColor="#000"
        android:layout_below="@+id/edtName"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtSurname"
        android:layout_alignBaseline="@+id/tvSurname"
        android:layout_alignBottom="@+id/tvSurname"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvSurname" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCourse"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:text="@string/course_code"
        android:textColor="#000"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtModule"
        android:layout_alignBaseline="@+id/tvModule"
        android:layout_alignBottom="@+id/tvModule"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/edtMark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/tvMark"
        android:text="@string/mark_percentage"
        android:textColor="#000"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/edtModule"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtMark"
        android:layout_alignBaseline="@+id/tvMark"
        android:layout_alignBottom="@+id/tvMark"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvSurname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edtStudentNumber"
        android:layout_alignBaseline="@+id/tvStudent"
        android:layout_alignBottom="@+id/tvStudent"
        android:layout_toEndOf="@+id/tvMark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:id="@+id/tvInfo"
        android:text="@string/enter_the_following"
        android:textColor="#000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBack"
        android:text="@string/back_home"
        android:background="@drawable/btnshape"
        android:onClick="BackActivity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/save_button"
        android:onClick="SaveActivity"
        android:layout_above="@+id/btnBack"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btnshape"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/edtCourse"
        android:layout_toEndOf="@+id/tvMark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/tvModule"
        android:text="@string/module_code"
        android:textColor="#000"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/edtCourse"
        android:layout_alignParentStart="true" />

</RelativeLayout>
